// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/InputNumeric rendering 1`] = `
<InputNumeric
  allowBlank={true}
  allowKeySpin={true}
  allowMouseSpin={false}
  ariaLabel="Input box"
  className=""
  currency="USD"
  data-qa-id=""
  decimals={2}
  disabled={false}
  icon=""
  iconHint=""
  id=""
  increment={1}
  items={Array []}
  listClass="input-numeric-list"
  listClassName=""
  listConfig={Object {}}
  listMaxHeight="300px"
  listPopupOptions={Object {}}
  listWidth="auto"
  max={9999999999.99}
  min={-9999999999.99}
  name=""
  onBlur={[Function]}
  onFocus={[Function]}
  onListClose={[Function]}
  onListOpen={[Function]}
  onTextChange={[Function]}
  onValueChange={[Function]}
  placeHolder=""
  prefix="an"
  showClear={false}
  showGroup={false}
  showSpinner={false}
  showTrigger={false}
  showTrigger2={false}
  size="md"
  textAlign="right"
  triggerIcon="icon-chevron-down"
  triggerIcon2="icon-chevron-down"
  triggerIconHint=""
  triggerIconHint2=""
  triggerIconToggle="icon-chevron-up"
  triggerIconToggle2="icon-chevron-up"
  value="999"
>
  <div
    className="an-input-numeric input-group buttons-0 input-group--md"
  >
    <input
      aria-label="Input box"
      className="input input-group__field textalign-right input__field"
      data-qa-id=""
      disabled={false}
      id=""
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseUp={[Function]}
      onPaste={[Function]}
      placeholder=""
      type="text"
    />
  </div>
</InputNumeric>
`;

exports[`components/InputNumeric rendering 2`] = `
<InputNumeric
  allowBlank={true}
  allowKeySpin={true}
  allowMouseSpin={false}
  ariaLabel="Input box"
  className=""
  currency="USD"
  data-qa-id=""
  decimals={2}
  disabled={false}
  icon=""
  iconHint=""
  id=""
  increment={1}
  items={Array []}
  listClass="input-numeric-list"
  listClassName=""
  listConfig={Object {}}
  listMaxHeight="300px"
  listPopupOptions={Object {}}
  listWidth="auto"
  max={9999999999.99}
  min={-9999999999.99}
  name=""
  onBlur={[Function]}
  onFocus={[Function]}
  onListClose={[Function]}
  onListOpen={[Function]}
  onTextChange={[Function]}
  onValueChange={[Function]}
  placeHolder=""
  prefix="an"
  showClear={false}
  showGroup={false}
  showSpinner={false}
  showTrigger={false}
  showTrigger2={false}
  size="md"
  textAlign="right"
  triggerIcon="icon-chevron-down"
  triggerIcon2="icon-chevron-down"
  triggerIconHint=""
  triggerIconHint2=""
  triggerIconToggle="icon-chevron-up"
  triggerIconToggle2="icon-chevron-up"
  type="percent"
  value={99}
>
  <div
    className="an-input-numeric input-group buttons-0 input-group--md"
  >
    <input
      aria-label="Input box"
      className="input input-group__field textalign-right input__field"
      data-qa-id=""
      disabled={false}
      id=""
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseUp={[Function]}
      onPaste={[Function]}
      placeholder=""
      type="text"
    />
  </div>
</InputNumeric>
`;

exports[`components/InputNumeric rendering 3`] = `
<InputNumeric
  allowBlank={true}
  allowKeySpin={true}
  allowMouseSpin={false}
  ariaLabel="Input box"
  className=""
  currency="USD"
  data-qa-id=""
  decimals={2}
  disabled={false}
  icon=""
  iconHint=""
  id=""
  increment={1}
  items={Array []}
  listClass="input-numeric-list"
  listClassName=""
  listConfig={Object {}}
  listMaxHeight="300px"
  listPopupOptions={Object {}}
  listWidth="auto"
  max={9999999999.99}
  min={-9999999999.99}
  name=""
  onBlur={[Function]}
  onFocus={[Function]}
  onListClose={[Function]}
  onListOpen={[Function]}
  onTextChange={[Function]}
  onValueChange={[Function]}
  placeHolder=""
  prefix="an"
  showClear={false}
  showGroup={false}
  showSpinner={false}
  showTrigger={false}
  showTrigger2={false}
  size="md"
  textAlign="right"
  triggerIcon="icon-chevron-down"
  triggerIcon2="icon-chevron-down"
  triggerIconHint=""
  triggerIconHint2=""
  triggerIconToggle="icon-chevron-up"
  triggerIconToggle2="icon-chevron-up"
  type="currency"
  value={1299}
>
  <div
    className="an-input-numeric input-group buttons-0 input-group--md"
  >
    <input
      aria-label="Input box"
      className="input input-group__field textalign-right input__field"
      data-qa-id=""
      disabled={false}
      id=""
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseUp={[Function]}
      onPaste={[Function]}
      placeholder=""
      type="text"
    />
  </div>
</InputNumeric>
`;
